# aemergent

./: .gitignore  .pre-commit-config.yaml  README_INTELLIGENT_REPL.md  TIDDLYWIKI_PROJECT_SUMMARY.md  WIKIC_FINAL_SUMMARY.md  pyproject.toml
aemergent/: __init__.py  codec_demo.py  codec_system.py  combinion.py  combit.py  combit.py.bak  constraint_solver.py  gravtree.py  intelligent_repl.py  operators.py  pascell.py  printout.py  sigtest.py  textsignal.py
aemergent/prompts/: bottom_up_types.md  codec_algebra_research.md  codec_system_summary.md
demos/: codec_system_demo.py  combit_demo.py  gravtree_demo.py  intelligent_repl_demo.py  operators_demo.py  pascell_demo.py  sigtest_demo.py  simple_repl_demo.py  textsignal_demo.py
docs/: README.md  blockprimes.md
scripts/: lint.sh
src/: __init__.py
tests/: test_combit.py  test_pascell.py
tiddlywiki_compiler/: DOCS.md  README.md  build_binary.py  cli_test_wiki.html  compression.py  current.html  demo.py  demo_wiki.html  final_demo.html  final_demo_short_flags.html  main.py  no_compression_wiki.html  optimal_wiki.py  package-lock.json  package.json  pyproject.toml  real_test.html  real_test2.html  real_wiki_template.py  sample_blockprimes.md  test.html  test_shell.html  test_short_flags.html  wiki_disassembler.py  wiki_template.py  wikic  wikic.py
tiddlywiki_compiler/sample_content/: algorithms.py  concepts.txt  introduction.md
tiddlywiki_compiler/sample_content/proofs/: theorem1.md
